# gql-rs

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: api.rs  config.rs  graphql.rs  lib.rs  main.rs  state.rs
