[package]
name = "gql-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.0"
async-graphql-tide = "2.0" # If you need to integrate into tide
async-std = { version = "1.10", features = ["attributes"] }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }