[package]
name = "gql-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-graphql = "3.0"
async-graphql-tide = "3.0" # If you need to integrate into tide
async-std = { version = "1.10", features = ["attributes"] }
envy = "0.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tracing = "0.1"
url = "2.2"